--- a/scores.html
+++ b/scores.html
@@ -3,50 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puntajes del test</title>
+    <meta name="author" content="Sciorra Adriano">
+    <title>Puntajes - Test de Termodinámica y Aeronáutica</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="newbery.ico">
-    <link rel="stylesheet" href="stylescore.css">
-
-    <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyCGMbiKv91StDrQ-HMSyLYykC4IiWBHpk8",
-    authDomain: "testjn-dc239.firebaseapp.com",
-    projectId: "testjn-dc239",
-    storageBucket: "testjn-dc239.appspot.com",
-    messagingSenderId: "741561670730",
-    appId: "1:741561670730:web:2a6b6764668cdff2399ab3",
-    measurementId: "G-PPJLVZ1C7K"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
-
 </head>
 <body>
     <div class="container">
-        <h1>Puntajes del test</h1>
-        <div id="score-table-container">
-            <table id="score-table">
-                <tr>
-                    <th>Nombre</th>
-                    <th>Puntaje</th>
-                </tr>
-                <!-- Los puntajes se cargarán dinámicamente aquí -->
-            </table>
-        </div>
+        <h1>Puntajes</h1>
+        <div id="scores-container"></div>
+        <button onclick="window.location.href='index.html'">Volver al Test</button>
     </div>
 
-    <script src="scores.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyCGMbiKv91StDrQ-HMSyLYykC4IiWBHpk8",
+            authDomain: "testjn-dc239.firebaseapp.com",
+            projectId: "testjn-dc239",
+            storageBucket: "testjn-dc239.appspot.com",
+            messagingSenderId: "741561670730",
+            appId: "1:741561670730:web:2a6b6764668cdff2399ab3",
+            measurementId: "G-PPJLVZ1C7K"
+        };
+
+        // Inicializar Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
+        // Obtener puntajes de Firebase
+        function getScores() {
+            const scoresContainer = document.getElementById('scores-container');
+            scoresContainer.innerHTML = ''; // Limpiar el contenedor
+
+            const scoresRef = db.ref('playersScores');
+            scoresRef.once('value', (snapshot) => {
+                if (snapshot.exists()) {
+                    snapshot.forEach(childSnapshot => {
+                        const childData = childSnapshot.val();
+                        const scoreElement = document.createElement('p');
+                        scoreElement.textContent = `${childData.name}: ${childData.score}`;
+                        scoresContainer.appendChild(scoreElement);
+                    });
+                } else {
+                    scoresContainer.textContent = 'No hay puntajes disponibles.';
+                }
+            });
+        }
+
+        // Llamar a la función para obtener los puntajes
+        getScores();
+    </script>
 </body>
 </html>
